--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "vue-chartjs": "^5.3.1"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.5.12"
+    "@vue/compiler-sfc": "^3.5.12",
+    "vite": "^6.1.1"
   }
 }
