--- a/project_name/package.json
+++ b/project_name/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "dev": "vite"
   },
   "dependencies": {
-    "chart.js": "^4.4.6",
+    "@mdi/font": "^7.4.47",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
+    "papaparse": "^5.5.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
+    
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
