--- a/project_name/package.json
+++ b/project_name/package.json
@@ -10,20 +10,21 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.8",
+    "bootstrap": "^5.3.0",
+    "chart.js": "^4.0.0",
     "core-js": "^3.8.3",
-    "papaparse": "^5.5.2",
-    "vue": "^3.2.13",
+    "papaparse": "^5.4.0",
+    "vue": "^3.3.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
-    
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "vite": "^4.0.0"
   },
   "browserslist": [
     "> 1%",
